--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="profile">
-            <img src="./img/photo-300.jpeg" alt="" class="profile-img">
+            <img src="./img/sukuna.jfif" alt="" class="profile-img">
             <h1>Akhmed Malachiyev</h1>
             <p>intern front-end developer</p>
             <ul class="social">
